@@ -1,3 +1,12 @@
+22-May-2015 Laurent Duflot
+	* MCEventVeto: add option for container key
+
+
+21-May-2015 Laurent Duflot
+	* PhysObjProxyUtils: bug fix in protection against events with <2 jets
+	(the bug caused no bias but the protection was not effective)
+
+
 20-May-2015 Laurent Duflot
 	* previous problems with SUSYTools-00-05-00-30 understood to be due
 	to a bug in overlap removal.
